--- a/data/pt/faq.yml
+++ b/data/pt/faq.yml
@@ -31,3 +31,14 @@ summer:
     answer: 'Não está incluso as passagens aérea, translado até o colégio, custos com passaporte, mas a YouBet! tem serviço de assessoria de visto e emissão de passagens.'
   - question: 'Qual o prazo para inscrição?'
     answer: 'Os estudantes internacionais devem solicitar a admissão através da YouBet! School até dia 10 de junho para o primeiro semestre e 10 de outubro para o segundo semestre.'
+winter:
+  - question: 'Lala'
+    answer: 'Preencha o formulário abaixo e um consultor irá entrar em contato com você.'
+  - question: 'Quem pode ir?'
+    answer: 'Estudantes com idade entre 14 e 18 anos, que esteja cursando o Ensino Médio no Brasil, será necessário o Histórico Escolar, não é preciso ter fluência em inglês, será aplicado testes de inglês para saber o nível, caso necessário o programa ESL.'
+  - question: 'O que inclui?'
+    answer: 'Além de todo o suporte. Hospedagem e alimentação estão inclusos, o colégio fica próximo a centros comerciais e o aluno sempre terá o auxilio necessário.'
+  - question: 'O que não está incluso?'
+    answer: 'Não está incluso as passagens aérea, translado até o colégio, custos com passaporte, mas a YouBet! tem serviço de assessoria de visto e emissão de passagens.'
+  - question: 'Qual o prazo para inscrição?'
+    answer: 'Os estudantes internacionais devem solicitar a admissão através da YouBet! School até dia 10 de junho para o primeiro semestre e 10 de outubro para o segundo semestre.'
