--- a/data/pt/globalCitizen.yml
+++ b/data/pt/globalCitizen.yml
@@ -3,9 +3,7 @@ image: "/uploads/images/cidadao-global.png"
 alt: "Jovens estudantes sorrindo na biblioteca"
 buttonText: "Faça um orçamento"
 buttonUrl: "/contato"
-content: "
-Com a **YouBet!** nós criamos oportunidades de unir pessoas de diversas nações, promovendo o desenvolvimento pessoal e o respeito mútuo. Não queremos somente ensinar um idioma ou vender pacotes de viagens enlatados, mas unificar o aprendizado com uma imersão cultural, ensinando nossos alunos habilidades que os tornem cidadãos do mundo.
+content: " O maior diferencial da **YouBet!** é proporcionar uma real experiência no exterior, através da vivência. Nós criamos oportunidades de unir pessoas de diversas nações, promovendo o desenvolvimento pessoal e o respeito mútuo. Não queremos somente ensinar um idioma ou vender pacotes de viagens enlatados, mas unificar o aprendizado com uma imersão cultural, ensinando nossos alunos habilidades que os tornem cidadãos do mundo e acreditamos que com conhecimento e vivência se alcança a comunicação global.
 
 
-**Venha ser um cidadão agora**.
-"
+**Venha ser um cidadão agora**"
