--- a/package.json
+++ b/package.json
@@ -14,11 +14,11 @@
     "prelint": "rimraf ./testResults/**/*.xml",
     "lint": "npm-run-all --parallel lint:*",
     "lint:es": "eslint --ext .es,.js \"./assets/scripts/**\" --format junit --output-file ./testResults/esLint.xml",
-    "lint:sass": "stylelint '**/*.scss' --syntax=scss --formatter --output-file ./testResults/stylelint.xml",
+    "lint:sass": "stylelint '**/*.scss' --custom-syntax --formatter --output-file ./testResults/stylelint.xml",
     "lint:markdown": "markdownlint *.md content/**/*.md",
     "prettier:check": "prettier --check  'src/**/*.js'",
     "prettier:write": "prettier --write .",
-    "sass:fix": "stylelint '**/*.scss' --syntax=scss --fix",
+    "sass:fix": "stylelint '**/*.scss' --custom-syntax --fix",
     "start": "npm-run-all  --parallel start:*",
     "start:hugo": "cross-env NODE_ENV=development hugo server --noHTTPCache=true --ignoreCache --templateMetrics --disableFastRender",
     "pretest": "npm run lint",
@@ -41,13 +41,10 @@
   "license": "MIT",
   "homepage": "http://youbetschool.com",
   "dependencies": {
-    "@glidejs/glide": "^3.4.1",
-    "caniuse-lite": "^1.0.30001251",
+    "@glidejs/glide": "^3.5.2",
     "core-js": "^3.16.2",
     "formbouncerjs": "^1.4.6",
-    "jest": "^27.0.6",
-    "netlify-cms": "^2.10.158",
-    "node-sass": "^6.0.1"
+    "jest": "^27.0.6"
   },
   "devDependencies": {
     "@babel/cli": "^7.14.8",
@@ -60,6 +57,7 @@
     "changelog-verify": "^1.1.2",
     "cross-env": "^7.0.3",
     "cssnano": "^5.0.8",
+    "dart-sass": "^1.25.0",
     "eslint": "^7.32.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-plugin-import": "^2.24.1",
@@ -69,19 +67,27 @@
     "modularscale-sass": "^3.0.10",
     "npm-run-all": "^4.1.5",
     "onchange": "^7.1.0",
-    "postcss": "^8.3.6",
+    "postcss": "^8.4.6",
     "postcss-cli": "^8.3.1",
     "prettier": "2.3.2",
     "prettier-plugin-go-template": "0.0.11",
-    "stylelint": "^13.13.1",
-    "stylelint-config-recommended": "^5.0.0",
-    "stylelint-config-recommended-scss": "^4.3.0",
-    "stylelint-config-sass-guidelines": "^8.0.0",
-    "stylelint-config-standard": "^22.0.0",
-    "stylelint-scss": "^3.20.1",
+    "rimraf": "^3.0.2",
+    "sass": "^1.54.9",
+    "sass-loader": "^13.0.2",
+    "sassdoc": "^2.7.4",
+    "sassdoc-theme-herman": "^4.0.2",
+    "stylelint": "^14.6.1",
+    "stylelint-config-recess-order": "^3.0.0",
+    "stylelint-config-recommended": "^7.0.0",
+    "stylelint-config-recommended-scss": "^6.0.0",
+    "stylelint-config-sass-guidelines": "^9.0.1",
+    "stylelint-config-standard": "^25.0.0",
+    "stylelint-scss": "^4.2.0",
+    "stylelint-selector-bem-pattern": "^2.1.1",
     "susy": "^3.0.7",
     "svgo": "^2.4.0",
     "synp": "^1.9.7",
-    "version-changelog": "^3.1.1"
+    "version-changelog": "^3.1.1",
+    "webpack": "^5.74.0"
   }
 }
