--- a/config.yaml
+++ b/config.yaml
@@ -47,6 +47,7 @@ permalinks:
   pages: /:slug/
 languages:
   pt:
+    baseURL: https://youbetschool.com.br
     contentDir: content/pt
     languageName: Português
     languageCode: 'pt-br'
@@ -108,6 +109,7 @@ languages:
 
   en:
     contentDir: content/en
+    baseURL: https://youbetschool.com
     languageName: English
     languageCode: 'en'
     title: 'YouBet! Real English'
