--- a/netlify.toml
+++ b/netlify.toml
@@ -1,8 +1,9 @@
 [build]
   publish = "public"
+  command = "./build.sh"
 
 [build.environment]
-  HUGO_VERSION = "0.92.1"
+  HUGO_VERSION = "0.93.3"
   NODE_VERSION = "v16.10.0"
 
 [context.production]
