--- a/.github/workflows/netlify-deploy.yaml
+++ b/.github/workflows/netlify-deploy.yaml
@@ -34,6 +34,8 @@ jobs:
           sass_embedded/dart-sass-embedded --version
       - name: Add to the PATH
         run: echo "$GITHUB_WORKSPACE/sass_embedded" >> $GITHUB_PATH
+      - name: Install dependencies
+        run: npm i
       - name: Build site with Hugo
         run: npm run build
       - name: Publish to Netlify
