--- a/.github/workflows/netlify-deploy.yaml
+++ b/.github/workflows/netlify-deploy.yaml
@@ -41,8 +41,8 @@ jobs:
       - name: Publish to Netlify
         uses: nwtgck/actions-netlify@v1.2
         with:
-          publish-dir: './public'
-          production-branch: 'main'
+          publish-dir: 'public'
+          production-branch: 'dev'
           github-token: ${{ secrets.GITHUB_TOKEN }}
           deploy-message: "Deploy from GitHub Actions"
         env:
