fix: high school content

--- a/data/pt/highSchool.yml
+++ b/data/pt/highSchool.yml
@@ -2,5 +2,5 @@ title: 'Ensino Médio nos Estados Unidos?'
 image: '/uploads/images/alunos-campus.png'
 alt: 'Jovens estudando e conversando'
 buttonText: "Saiba mais"
-buttonUrl: "/programas/ensino-médio"
+buttonUrl: "/programas/ensino-medio"
 content: 'Com a YouBet! você tem maiores chances de estudar em um colégio tradicional americano, tendo um ótimo custo benefício com forma de pagamento diferenciadas. São colégios que proporcionam uma típica vida americana e dão a melhor estrutura acadêmica com dormitórios, alimentação e excelência na educação. Com o programa você obtém certificados de licenciatura junto com o ensino médio, isto é, além de uma formação internacional você garante capacitação profissional e experiência cultural.'
