--- a/package.json
+++ b/package.json
@@ -87,6 +87,7 @@
     "susy": "^3.0.7",
     "svgo": "^2.4.0",
     "synp": "^1.9.7",
+    "vanilla-lazyload": "^17.8.3",
     "version-changelog": "^3.1.1",
     "webpack": "^5.74.0"
   }
