--- a/data/pt/faq/summer.yml
+++ b/data/pt/faq/summer.yml
@@ -1,12 +1,7 @@
-# id = faqSummer
-# name = faqSummer
+- question: 'Lala?'
+  answer: 'Resposta Lala'
+- question: 'lili?'
+  answer: 'Resposta Lili'
+- question: 'lolo?'
+  answer: 'Resposta Lolo'
 
-# [[items]]
-
-# question = "Como se inscrever?"
-# answer = "Preencha o formulário abaixo e um consultor irá entrar em contato com você.""
-
-# [[items]]
-
-# question = "Quem pode ir?"
-# answer = "Estudantes com idade entre 13 e 18 anos, que esteja cursando o Ensino Médio no Brasil, será necessário o Histórico Escolar, não é preciso ter fluência em inglês, será aplicado testes de inglês para saber o nível, caso necessário o programa ESL."
