feat: fix partners ids

--- a/data/pt/pricing.yml
+++ b/data/pt/pricing.yml
@@ -3,7 +3,7 @@
   scholarship: 'tem bolsas para brasileiros e pra quem trabalha no campus'
   total: '16000'
   age: '13 a 18 anos'
-  partnerID: 'campion'
+  partnerID: 'campion-academy'
   countryID: 'us'
   countryName: 'unitedStates'
   duration: 'anual'
@@ -12,7 +12,7 @@
   title: 'immersionCamp'
   total: '2800'
   age: '10 a 18 anos'
-  partnerID: 'campion'
+  partnerID: 'campion-academy'
   countryID: 'us'
   countryName: 'unitedStates'
   duration: 'até 20 dias'
@@ -20,7 +20,7 @@
 - program: 'winter'
   title: 'winterProgram'
   total: '2800'
-  partnerID: 'campion'
+  partnerID: 'campion-academy'
   countryID: 'us'
   countryName: 'unitedStates'
   age: '10 a 18 anos'
@@ -29,7 +29,7 @@
 - program: 'summer'
   title: 'summerProgram'
   total: '2800'
-  partnerID: 'campion'
+  partnerID: 'campion-academy'
   countryID: 'us'
   countryName: 'unitedStates'
   age: '10 a 18 anos'
