--- a/data/pt/globalCitizen.yml
+++ b/data/pt/globalCitizen.yml
@@ -1,5 +1,6 @@
 title: "Quer se tornar um Cidadão Global?"
 image: "/uploads/images/cidadao-global.png"
+animation: "/uploads/animation/1542-3018-party.riv"
 alt: "Jovens estudantes sorrindo na biblioteca"
 buttonText: "Faça um orçamento"
 buttonUrl: "/contato"
