--- a/package.json
+++ b/package.json
@@ -44,7 +44,8 @@
     "@glidejs/glide": "^3.5.2",
     "core-js": "^3.16.2",
     "formbouncerjs": "^1.4.6",
-    "jest": "^27.0.6"
+    "jest": "^27.0.6",
+    "lottie-web": "^5.12.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.14.8",
