--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "prettier:check": "prettier --check  'src/**/*.js'",
     "prettier:write": "prettier --write .",
     "sass:fix": "stylelint '**/*.scss' --custom-syntax --fix",
-    "start": "npm-run-all  --parallel start:*",
+    "build:css": "mkdir -p static/dist/css && sass assets/stylesheets/index.scss static/dist/css/main.css --no-source-map --load-path=assets/stylesheets",
+    "build:css:watch": "mkdir -p static/dist/css && sass assets/stylesheets/index.scss static/dist/css/main.css --no-source-map --load-path=assets/stylesheets --watch",
+    "start": "npm run build:css && npm-run-all --parallel start:*",
     "start:hugo": "cross-env NODE_ENV=development hugo server --noHTTPCache=true --ignoreCache --templateMetrics --disableFastRender",
     "pretest": "npm run lint",
     "test": "jest",
@@ -57,7 +59,6 @@
     "changelog-verify": "^1.1.2",
     "cross-env": "^7.0.3",
     "cssnano": "^5.0.8",
-    "dart-sass": "^1.25.0",
     "eslint": "^7.32.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-plugin-import": "^2.24.1",
@@ -72,7 +73,7 @@
     "prettier": "2.3.2",
     "prettier-plugin-go-template": "0.0.11",
     "rimraf": "^3.0.2",
-    "sass": "^1.54.9",
+    "sass": "^1.74.1",
     "sass-loader": "^13.0.2",
     "sassdoc": "^2.7.4",
     "sassdoc-theme-herman": "^4.0.2",
