--- a/netlify.toml
+++ b/netlify.toml
@@ -12,6 +12,7 @@ command = """\
   HUGO_VERSION = "0.124.1"
   NODE_VERSION = "20"
   DART_SASS_VERSION = "1.72.0"
+  NETLIFY_USE_YARN = "false"
 
 [context.production]
   command = "npm run build"
